sync the tree to latest 1.8 and beyond

--- a/components/Makefile
+++ b/components/Makefile
@@ -1,11 +1,15 @@
-IDLC=/usr/lib/firefox-2.0.0.12/xpidl
-INC=/usr//share/idl/firefox-2.0.0.12/
+IDLC=/home/chunlei/xulrunner-sdk/bin/xpidl
+INC=/home/chunlei/xulrunner-sdk/idl
 XPTS=nsIFireinput.xpt
 
 all: $(XPTS)
 
+#	$(IDLC) -m typelib -w -v -I $(INC) -e $(@) $(<)
 %.xpt: %.idl
 	$(IDLC) -m typelib -w -v -I $(INC) -e $(@) $(<)
 
 .PHONY: all
+
+clean: 
+	rm -f $(XPTS)
 
